[tool.poetry]
name = "duskmire"
version = "0.1.0"
description = "Tiny independent forum for bunch of people."
authors = ["Serhii Sytnik <sytnikserhii22038@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
django = "^5.1.4"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
